# songwriter_ai

./: .gitignore  LICENSE  README.md  pyproject.toml
crawler/: main.py
parser/: main.py
