[tool.poetry]
name = "songwriter-ai"
version = "0.1.0"
description = ""
authors = ["Lucas Magnum <lucasmagnumlopes@gmail.com>"]
readme = "README.md"
packages = [{include = "songwriter"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
aiofiles = "^23.1.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
